Creation modules pages and shared, creation components inicio and header

--- a/src/index.html
+++ b/src/index.html
@@ -9,5 +9,8 @@
 </head>
 <body>
   <app-root></app-root>
+
+  <!-- Para usar iconos de fontawesome -->
+  <script src="https://kit.fontawesome.com/cd280c1b0e.js" crossorigin="anonymous"></script>
 </body>
 </html>
